<?xml version="1.0"?>
<package>
  <name>labview_bridge</name>
  <description>The labview_bridge package</description>

  <version>0.1.0</version>
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/fsuarez6/labview_bridge</url>
  <url type="repository">https://github.com/fsuarez6/labview_bridge</url>
  <author>Francisco Suarez-Ruiz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>  
  
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
</package>
